templates/playground/playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-stack-playground
  labels:
    app: llama-stack-playground
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: llama-stack-playground
