templates/playground/playground/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama-stack-playground
  annotations:
    openshift.io/host.generated: "true"
spec:
  to:
    kind: Service
    name: llama-stack-playground
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
